--- a/templates/pub.html
+++ b/templates/pub.html
@@ -122,7 +122,7 @@
                                         </div>
                                         <div class="dropdown-divider"></div>
                                         <!-- Comment form-->
-                                        <form  class="form-horizontal" action=""> <!-- /create_comment/{{ post.id }} -->
+                                        <form class="form-horizontal" action="/create_comment/{{ post.id }}">
                                             {%  csrf_token %}
                                             <div class="form-group row">
                                                 <div class="col-sm-12">
@@ -136,11 +136,10 @@
 
                                         <div class="feed-single mt-3 mb-3">
                                             {% for cmnt in cmt %}
-                                                {% if cmnt.Titre_pub == titre_pub %}
                                                 <div class="media">
-                                                    <img class="mr-3 rounded-circle" height="40px" width="40px" src="{{ cmnt.Image_profil.url }}" alt="Generic placeholder image">
+                                                    <img class="mr-3 rounded-circle" height="40px" width="40px" src="{{ cmnt.Auteur_Comment_pub.Image_profil.url }}" alt="Generic placeholder image">
                                                     <div class="media-body">
-                                                        <h6 class="mt-1 mb-2">{{ cmnt.Auteur_Comment_pub }}
+                                                        <h6 class="mt-1 mb-2">{{ cmnt.Auteur_Comment_pub.Nom_Complet }}
                                                             <small class="text-muted  pl-2"><i class="fa fa-clock"></i>{{ cmnt.Date_Comment_pub }}</small>
                                                         </h6>
                                                         <div class="card shadow-sm">
@@ -150,8 +149,6 @@
                                                         </div>
                                                     </div>
                                                 </div>
-                                                {% else %}
-                                                {% endif %}
                                             {% endfor %}
                                         </div>
 
