--- a/templates/news_post.html
+++ b/templates/news_post.html
@@ -106,7 +106,7 @@
                                     <tbody>
                                         {% for pub in News_Posts %}
                                         <tr>
-                                            <td>{{ pub.Auteur_pub }}</td>
+                                            <td>{{ pub.Auteur_pub.Nom_Complet }}</td>
                                             <td>{{ pub.Titre }}</td>
                                             <td>{{ pub.Contenu }}</td>
                                             <td>{{ pub.Fichier }}</td>
