--- a/templates/pub.html
+++ b/templates/pub.html
@@ -111,7 +111,11 @@
                                             </div>
                                             <div class="col-sm-4">
                                                 <i class="fas fa-comment"></i>
-                                                <span class="None"> Commentaires</span>
+                                                {% if cpt == 0 %}
+                                                <span class="None"> Commentaire</span>
+                                                {% else %}
+                                                <span class="None"> {{ cpt }}</span>
+                                                {% endif %}
                                             </div>
                                             <div class="col-sm-4">
                                                 <a href="#">
