--- a/templates/profil.html
+++ b/templates/profil.html
@@ -64,7 +64,7 @@
                                 </a>
                             </li>
                             <li class="parent">
-                                <a href="#" class=""><i class="fas fa-comments mr-3"></i>
+                                <a href="/chat" class=""><i class="fas fa-comments mr-3"></i>
                                     <span class="none">Chat</span>
                                 </a>
                             </li>
