--- a/templates/manage_stress_app.html
+++ b/templates/manage_stress_app.html
@@ -82,6 +82,9 @@
         </div>
 
         <div class="col-sm-9 col-xs-12 content pt-3 pl-0">
+            <button class="btn btn-success" data-toggle="modal" data-target="#myModal">
+                <i class="fas fa-plus mr-3"></i> Envoyer Message
+            </button>
             <div class="row mt-3">
                 <div class="col-sm-12">
                     <!--Card groups-->
@@ -103,6 +106,44 @@
                         {% endfor %}
                     </div>
                     <!--/Card groups-->
+                </div>
+            </div>
+        </div>
+
+        <div class="modal fade" id="myModal">
+            <div class="modal-dialog modal-dialog-centered">
+                <div class="modal-content">
+          
+                    <!-- Modal Header -->
+                    <div class="modal-header">
+                        <h3>Ecrire un Message</h3>
+                    <button type="button" class="close" data-dismiss="modal">&times;</button>
+                    </div>
+          
+                    <!-- Modal body -->
+                    <div class="modal-body">
+                        <form class="form-horizontal mt-4 mb-5" method="post" action="{% url 'send_msg' %}">
+                            {%  csrf_token %}
+                            <div class="form-group row">
+                                <label for="Object_msg" class="control-label col-sm-2">Object</label>
+                                <div class="col-sm-10">
+                                    <input type="text" name="Object_msg" class="form-control" placeholder="Object" required/>
+                                </div>
+                            </div>
+                            <div class="form-group row">
+                                <label for="Content_msg" class="control-label col-sm-2">Contenu</label>
+                                <div class="col-sm-10">
+                                    <textarea name="Content_msg" class="form-control" placeholder="Contenu" required></textarea>
+                                </div>
+                            </div>
+                            <div class="form-group row">
+                                <div class="offset-sm-2 col-sm-9">
+                                    <input type="submit" class="btn btn-success" value="Envoyer">
+                                    <a class="btn btn-danger" href="/manage_stress_app">Annuler</a>
+                                </div>
+                            </div>
+                        </form>
+                    </div>
                 </div>
             </div>
         </div>
