--- a/templates/index_admin.html
+++ b/templates/index_admin.html
@@ -132,7 +132,7 @@
                             <div class="border shadow p-3 bg-success">
                                 <p class="pw-2 text-center text-white">
                                     <i class="fa fa-weixin"></i>
-                                    <small class="bc-description text-white">225</small>
+                                    <h3 class="bc-description text-white">255</h3>
                                 </p>
                                 <p class="mt-2 text-white">Commentaires</p>
                             </div>
@@ -142,7 +142,7 @@
                             <div class="border shadow p-3 bg-danger">
                                 <p class="pw-2 text-center text-white">
                                     <i class="fa fa-smile"></i>
-                                    <small class="bc-description text-white">{{ nbr_MS }}</small>
+                                    <h3 class="bc-description text-white">{{ nbr_MS }}</h3>
                                 </p>
                                 <p class="mt-2 text-white">Manage Stress</p>
                             </div>
@@ -152,7 +152,7 @@
                             <div class="border shadow p-3 bg-primary">
                                 <p class="pw-2 text-center text-white">
                                     <i class="fa fa-database"></i>
-                                    <small class="bc-description text-white">{{ nbr_RS }}</small>
+                                    <h3 class="bc-description text-white">{{ nbr_RS }}</h3>
                                 </p>
                                 <p class="mt-2 text-white">Ressources</p>
                             </div>
@@ -162,7 +162,7 @@
                             <div class="border shadow p-3 bg-warning">
                                 <p class="pw-2 text-center text-white">
                                     <i class="fa fa-envelope-o"></i>
-                                    <small class="bc-description text-white">95</small>
+                                    <h3 class="bc-description text-white">{{ nbr_msg }}</h3>
                                 </p>
                                 <p class="mt-2 text-white">Messages privées</p>
                             </div>
